syntax = "proto3";

package proto;

option go_package = "github.com/thekure/chittychat_skrrrt/proto";

message AskForTimeMessage{
    int64 clientId = 1; // Not mandatory..
}

message TimeMessage{
    string time = 1; // This just increments, it's for ordering.
    string serverName = 2;
    // string example = 2;
    // string anotherExample = 3;
}

service TimeAskService{
    rpc GetTime (AskForTimeMessage) returns (TimeMessage);
}